# rs-image-undistorter

./: Cargo.toml  readme.MD
src/: environment.rs  lib.rs  main.rs  matrix.rs  normalizar-imagem.txt  point.rs  util.rs
